src/test/ui/consts/const_limit/const_eval_limit_reached.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_eval_limit_reached.rs:6:11
   |
LL |     while x != 1000 {
   |           ^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
